objects/DT_Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>DT_Class_Method__c</fullName>
        <label>Class Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_Class_Name__c</fullName>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_Error_Message__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_Error_Type__c</fullName>
        <label>Error Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apex Trigger</fullName>
                </value>
                <value>
                    <fullName>Business Validation</fullName>
                </value>
                <value>
                    <fullName>Component</fullName>
                </value>
                <value>
                    <fullName>DML Errors</fullName>
                </value>
                <value>
                    <fullName>Integration Batch Job</fullName>
                </value>
                <value>
                    <fullName>Integration Inbound</fullName>
                </value>
                <value>
                    <fullName>Integration Outbound</fullName>
                </value>
                <value>
                    <fullName>Apex Controller</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DT_Exception_Type__c</fullName>
        <description>Specifies the type of exception</description>
        <inlineHelpText>Specifies the type of exception</inlineHelpText>
        <label>Exception Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_Instance__c</fullName>
        <label>Instance</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DT_Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DT_Object_ID__c</fullName>
        <label>Object ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_Source_URL__c</fullName>
        <label>Source URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DT_Username__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Username</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DT_Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Error Log</label>
    <nameField>
        <label>Error Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>